--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "firebase": "^10.2.0",
     "formik": "^2.4.2",
@@ -28,6 +29,7 @@
     "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
     "styled-components": "^6.0.2",
+    "swiper": "^10.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
